--- a/index.html
+++ b/index.html
@@ -2,50 +2,50 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <style type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Google Homepage</title>
   </head>
   <body>
+    <nav class="header">
+      <ul>
+        <li><a href="www.gmail.com">Gmail</a></li>
+        <li><a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+        <li><a id="apps" href="https://about.google/intl/en/products/?tab=wh"></a></li>
+        <li><button><a id="signIn" href="SignIn">SignIn</a></button></li>
+      </ul>
+    </nav>
+
     <div id="container">
-      <nav>
-        <a href="www.gmail.com">Gmail</a>
-        <a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl">Images</a>
-        <a href="https://about.google/intl/en/products/?tab=wh"></a>
-        <button><a href="SignIn">SignIn</a></button>
-      </nav>
-
-      <div class="middle">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
-        <input type="text" placeholder="search your query here">
-        <button><a href="GoogleSearch">Google Search</a></button>
-        <button><a href="lucky">I'm Feeling Lucky</a></button>
-
-        <article>
+      <h1 id="logo">Google</h1>
+        <form>
+          <input type="search" value="">
+          <input type="submit" value="Google Search">
+          <input type="submit" value="I'm Feeling lucky">
+        </form>
+        <article><small>
           Google offered in: <a href="#">हिन्दी</a><a href="#">বাংলা</a>
             <a href="#">తెలుగు</a><a href="#">मराठी</a><a href="#">தமிழ்</a>
             <a href="#">ગુજરાતી</a><a href="#">ಕನ್ನಡ</a><a href="#">മലയാളം</a>
             <a href="#">ਪੰਜਾਬੀ</a>
+            </small>
         </article>
-
-        <div class="footer">
-        <nav>
-          <a href="www.google.co.in">India</a>
-
-          <a href="#">Advertising</a>
-          <a href="#">Business</a>
-          <a href="#">About</a>
-          <a href="#">How Seach works</a>
-
-          <a href="#">Privacy</a>
-          <a href="#">Terms</a>
-          <a href="#">Settings</a>
-
-        </nav>
-
-        </div>
-
-      </div>
-
     </div>
+
+    <footer>
+      <span>India</span>
+        <nav class="clearfix">
+          <ul>
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">How Seach works</a></li>
+          </ul>
+          <ul class="right-links">
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
+          </ul>
+        </nav>
+        </footer>
   </body>
 </html>
