--- a/index.html
+++ b/index.html
@@ -4,32 +4,37 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Google Homepage</title>
+	<!--[if IE]>
+        	<script
+			src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+		</script>
+	<--[endif]-->
   </head>
   <body>
-    <nav class="header">
+    <nav id="header">
       <ul>
-        <li><a href="www.gmail.com">Gmail</a></li>
-        <li><a href="https://www.google.co.in/imghp?hl=en&tab=wi&ogbl">Images</a></li>
-        <li><a id="apps" href="https://about.google/intl/en/products/?tab=wh"></a></li>
-        <li><button><a id="signIn" href="SignIn">SignIn</a></button></li>
+        <li><a href="">Gmail</a></li>
+        <li><a href="">Images</a></li>
+        <li><a href="" id="apps"></a></li>
+        <li><a href="" id="signin">Sign in</a></li>
       </ul>
     </nav>
 
     <div id="container">
       <h1 id="logo">Google</h1>
         <form>
-          <input type="search" value="">
+          <input type="search">
           <input type="submit" value="Google Search">
           <input type="submit" value="I'm Feeling lucky">
         </form>
-        <article><small>
+        <p><small>
           Google offered in: <a href="#">हिन्दी</a><a href="#">বাংলা</a>
             <a href="#">తెలుగు</a><a href="#">मराठी</a><a href="#">தமிழ்</a>
             <a href="#">ગુજરાતી</a><a href="#">ಕನ್ನಡ</a><a href="#">മലയാളം</a>
             <a href="#">ਪੰਜਾਬੀ</a>
             </small>
-        </article>
-    </div>
+        </p>
+    </div><!-- #container-->
 
     <footer>
       <span>India</span>
@@ -46,6 +51,6 @@
             <li><a href="#">Settings</a></li>
           </ul>
         </nav>
-        </footer>
+     </footer>
   </body>
 </html>
